--- a/src/components-II/landing-page/section-two/SectionTwo.module.scss
+++ b/src/components-II/landing-page/section-two/SectionTwo.module.scss
@@ -1,28 +1,5 @@
 @import "../../../scss/variables";
-
-// ===================
-// MIXINS
-// ===================
-@mixin img_fluid {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-// ====================
-// END OF MIXINS
-// ====================
-
-// using the BEM system
-.container {
-  max-width: 1200px;
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 1.25rem;
-}
-
-p {
-  color: $blackText;
-}
+@import "../../../scss/mixins";
 
 .icon_wrapper {
   border: 1px solid #d3d3d360;
@@ -38,54 +15,43 @@ p {
 .section__two {
   background: rgba(249, 247, 255, 1);
   text-align: center;
-  padding: 10px 0 64px;
+  padding: 10rem 0;
 
-  @media (min-width: 992px) {
-    padding: 7.5rem 0 16.5rem;
+  .float_icon_1,
+  .float_icon_3 {
+    width: fit-content;
+    margin: auto;
+    display: none;
+
+    @media (min-width: 992px) {
+      display: block;
+    }
+
+    p {
+      font-size: 1.125rem;
+      font-weight: 700;
+      margin-top: 1rem;
+    }
   }
 
-  .section__two_wrapper {
-    position: relative;
-    .float_icon_1,
-    .float_icon_2,
-    .float_icon_3 {
-      p {
-        font-size: 1.125rem;
-        font-weight: 700;
-        margin-top: 1rem;
-      }
+  .float_icon_1 {
+    margin-top: 5em;
+    transform: translateX(5rem) scale(0.5);
+    p {
+      color: rgb(82, 196, 26);
     }
-
-    .float_icon_1 {
-      transform: scale(0.2);
-      position: absolute;
-      top: 45%;
-      left: -10%;
-      p {
-        display: none;
-        color: $activeColor;
-      }
+    @media (min-width: 992px) {
+      transform: translateX(5rem) scale(1);
     }
-
-    .float_icon_2 {
-      position: absolute;
-      top: 115%;
-      left: 50%;
-      transform: translate(-50%, -50%) scale(0.3);
-      p {
-        color: $black;
-      }
+  }
+  .float_icon_3 {
+    margin-bottom: 5em;
+    transform: translateX(10rem) scale(0.5);
+    p {
+      color: rgb(170, 50, 52);
     }
-
-    .float_icon_3 {
-      transform: scale(0.2);
-      position: absolute !important;
-      top: 71%;
-      left: 67%;
-      p {
-        display: none;
-        color: rgba(170, 50, 52, 1);
-      }
+    @media (min-width: 992px) {
+      transform: translateX(10rem) scale(1);
     }
   }
 
@@ -93,7 +59,6 @@ p {
     width: 100%;
     max-width: 31.5rem;
     margin: 0 auto;
-    margin-top: 5.38rem;
 
     .section__two_title {
       font-weight: 700;
@@ -115,154 +80,22 @@ p {
     }
   }
 
-  .section__two_tasklist_wrapper {
-    max-width: 65rem;
-    width: 100%;
-    margin: 3.6rem auto;
-
-    .section__two_tag_wrapper {
-      position: relative;
-      max-width: 591.67px;
-      width: 100%;
-      margin: 0 auto;
-      display: flex;
-      flex-direction: column;
-      gap: 0.6rem;
-      @media (min-width: 768px) {
-        gap: 1.125rem;
-      }
-
-      .tag1 {
-        width: 80%;
-        transform: translateX(25%);
-
-        @media (min-width: 768px) {
-          width: 100%;
-          transform: translateX(0%);
-        }
-      }
-      .tag2 {
-        width: 80%;
-        transform: translateX(12%);
-
-        @media (min-width: 768px) {
-          width: 100%;
-          transform: translateX(10%);
-        }
-      }
-      .tag3 {
-        width: 80%;
-        @media (min-width: 768px) {
-          width: 100%;
-          transform: translateX(-10%);
-        }
-      }
+  .taskDisplay {
+    @include container;
+    margin-top: 39px;
+    display: flex;
+    flex-direction: column;
+    @media (min-width: 992px) {
+      flex-direction: row;
     }
-  }
-}
-
-// Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
-}
-
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {
-  .section__two {
-    text-align: center;
-
-    .section__two_wrapper {
-      .float_icon_1 {
-        transform: scale(0.4);
-        top: 60%;
-        left: 3%;
-      }
-
-      .float_icon_2 {
-        top: 120%;
-        transform: translate(-50%, -50%) scale(0.4);
-      }
-
-      .float_icon_3 {
-        transform: scale(0.4);
-        top: 80%;
-        left: 80%;
-      }
+    .client,
+    .assistant {
+      flex: 1;
     }
 
-    header {
-      margin-top: 7.5rem;
-
-      .section__two_subtitle {
-        font-size: 1.25rem;
-        line-height: 160%;
-        margin-bottom: 7.9rem;
-      }
-    }
-  }
-}
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-  .section__two {
-    .section__two_wrapper {
-      .float_icon_1 {
-        transform: scale(0.6);
-
-        p {
-          display: block;
-        }
-      }
-
-      .float_icon_2 {
-        top: 130%;
-
-        transform: translate(-50%, -50%) scale(0.6);
-      }
-
-      .float_icon_3 {
-        transform: scale(0.6);
-        p {
-          display: block;
-        }
-      }
-    }
-  }
-}
-
-// X-Large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {
-  .section__two {
-    .section__two_wrapper {
-      .float_icon_1 {
-        left: 2%;
-      }
-    }
-  }
-
-  // XX-Large devices (larger desktops, 1400px and up)
-  @media (min-width: 1400px) {
-    .section__two {
-      .section__two_wrapper {
-        .float_icon_1 {
-          transform: scale(1);
-          top: 21%;
-          left: 5%;
-          p {
-            display: block;
-          }
-        }
-
-        .float_icon_2 {
-          transform: translate(-50%, -50%) scale(1);
-        }
-
-        .float_icon_3 {
-          top: 67%;
-          left: 85%;
-          transform: scale(1);
-          p {
-            display: block;
-          }
-        }
+    .assistant {
+      @media (min-width: 992px) {
+        margin-top: -10rem;
       }
     }
   }
