--- a/src/components-II/landing-page/todoList/todo.module.scss
+++ b/src/components-II/landing-page/todoList/todo.module.scss
@@ -34,8 +34,9 @@
   }
   &_header {
     text-align: center;
+    margin-bottom: 3rem;
     @media screen and (min-width: 992px) {
-      text-align: right;
+      padding: 0 5rem;
     }
     h3 {
       font-size: 24px;
