--- a/src/components-II/landing-page/virtualAssistant/virtualAssistant.module.scss
+++ b/src/components-II/landing-page/virtualAssistant/virtualAssistant.module.scss
@@ -29,6 +29,45 @@
   }
 
   .banner {
-    @include container;
+    @media (min-width: 992px) {
+      @include container;
+    }
+  }
+
+  .assistantSlide {
+    margin: 6.6rem 0;
+    .imgWrapper {
+      width: fit-content;
+      margin: auto;
+    }
+
+    .buttonNav {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 1rem;
+      gap: 1rem;
+      @media (min-width: 992px) {
+        display: none;
+      }
+
+      button {
+        padding: 12px;
+        background-color: $activeColor;
+        border-radius: 8px;
+        border: 1px solid;
+        color: $white;
+        cursor: pointer;
+        transition: 0.2s all ease-in;
+
+        &:hover {
+          opacity: 0.5;
+        }
+
+        &:disabled {
+          opacity: 0.5;
+        }
+      }
+    }
   }
 }
