--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -19,3 +19,10 @@ body {
     box-shadow: 0px 0px 0px 4px #714dd950;
   }
 }
+
+.grow {
+  transition: 0.3s ease;
+  &:hover {
+    transform: scale(1.05);
+  }
+}
