feat(TEA-220): created context and added signup and login functionalities

--- a/src/components/ProfileScreen/NavSidebar.module.scss
+++ b/src/components/ProfileScreen/NavSidebar.module.scss
@@ -143,6 +143,7 @@ body {
     align-items: center;
     gap: 0.5rem;
     padding-left: 3rem;
+    cursor: pointer;
 }
 
 .logoutmob p {
@@ -311,6 +312,7 @@ a {
     align-items: center;
     gap: 0.5rem;
     padding-top: 12px;
+    cursor: pointer;
 }
 
 .logoutcon p {
