--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -28,3 +28,10 @@
   margin: 0 auto;
   padding: 0 1rem;
 }
+
+@mixin header-font {
+  font-size: 24px;
+  @media (min-width: 992px) {
+    font-size: 48px;
+  }
+}
