--- a/src/components/PreferenceSetting/Preference.module.scss
+++ b/src/components/PreferenceSetting/Preference.module.scss
@@ -1,6 +1,8 @@
 :local(.psf) {
-  display: flex;
-  flex-direction: row;
+  // display: flex;
+  // flex-direction: row;
+  display: grid;
+  grid-template-columns: 20vw auto;
 }
 :local(.preference) {
   background-color: #f6fafb;
