--- a/src/components/ProfileScreen/NavSidebar.module.scss
+++ b/src/components/ProfileScreen/NavSidebar.module.scss
@@ -9,7 +9,7 @@ body {
 /* Side Bar */
 
 .sidecon {
-    width: 250px;
+    width: 20vw;
     height: 100vh;
     background: #F6FAFB;
     position: fixed;
@@ -166,8 +166,8 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0px 40px;
-    width: calc(100% - 250px);
-    margin-left: 250px;
+    // width: calc(100% - 250px);
+    // margin-left: 250px;
     height: 64px;
     background: #F6FAFB;
     border-bottom: 1px solid #E9F3F5;
@@ -335,9 +335,9 @@ a {
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        padding: 12px 20px;
+        // padding: 12px 20px;
         width: 100%;
-        height: 56px;
+        // height: 56px;
         background: #F6FAFB;
         border-bottom: 1px solid #E9F3F5;
         margin-left: 0px;
