--- a/src/core/todo/NewTask.module.scss
+++ b/src/core/todo/NewTask.module.scss
@@ -1,156 +1,172 @@
-
 // Website variables
-$bgColor: #F6FAFB;
-$bgWhite: #FFFFFF;
+$bgColor: #f6fafb;
+$bgWhite: #ffffff;
 $textDarkgrey: #333333;
 $textLightgrey: #707070;
-$textLightMode: #E9F3F5;
-$btnPurple: #714DD9;
+$textLightMode: #e9f3f5;
+$btnPurple: #714dd9;
 
-.newTaskBody{
-        background-color: $bgColor;
-        color: $textDarkgrey;
-        font-size: .8rem;
+.newTaskBody {
+  background-color: $bgColor;
+  color: $textDarkgrey;
+  font-size: 0.8rem;
+  height: 100vh;
 
-        // flex main body
-        .newTaskContainer{
+  // flex main body
+  .newTaskContainer {
+    .newTaskSidebar {
+      @media screen and (max-width: 933px) {
+        display: none;
+      }
+    }
+    display: flex;
+
+    .mainContainer {
+      @media screen and (max-width: 933px) {
+        width: 100vw;
+        padding: 2rem 2rem;
+      }
+      .newTaskBack {
+        font-size: 1.5rem;
+        cursor: pointer;
+        @media screen and (min-width: 933px) {
+          display: none;
+        }
+      }
+      // header
+      .newTaskHeader {
+        @media screen and (max-width: 933px) {
+          padding: 2rem 2rem;
+          width: 100%;
+        }
+        width: 80vw;
+        padding: 2rem 0 0 1rem;
+        border-bottom: 1px solid $textLightMode;
+
+        .newTaskTitle {
+          display: inline-block;
+          font-size: 1rem;
+          padding-bottom: 1rem;
+          border-bottom: 2px solid $btnPurple;
+        }
+      }
+
+      // form
+      .newTaskForm {
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        row-gap: 1rem;
+
+        .formGroup {
           display: flex;
+          flex-direction: column;
+          // row-gap: 2rem;
 
-          .mainContainer{
+          .formGroup__item {
+            position: relative;
+            display: flex;
+            align-items: center;
+            width: 100%;
+          }
 
-          // header
-          .newTaskHeader{
-            width: 80vw;
-            padding: 1rem 0 0 1rem;
-            border-bottom: 1px solid $textLightMode;
+          // inputs
+          .newTaskInput {
+            padding: 0.8rem;
+            border-radius: 10px;
+            border: 1px solid $textLightMode;
+            color: $textLightgrey;
+          }
 
-          .newTaskTitle{
-            display: inline-block;
-            font-size: 1rem;
-            padding-bottom: 1rem;
-            border-bottom: 2px solid $btnPurple;
+          .newTaskInputTime {
+            padding: 0.7rem 0.8rem;
+          }
+
+          .icon {
+            position: absolute;
+            right: 1.2rem;
+          }
+
+          .newTaskTextarea {
+            height: 6rem;
+            resize: none;
+            border: 1px solid $textLightMode;
+            border-radius: 10px;
+            padding: 0.8rem;
+            color: $textLightgrey;
+          }
+
+          // label
+          .newTaskLabel {
+            font-weight: 600;
+            // margin-bottom: .5rem;
           }
         }
 
-      // form
-        .newTaskForm{
-          padding: 1rem;
+        .radio_container {
+          display: flex;
+          row-gap: 1rem;
+
+          .newTaskInputRadio {
+            accent-color: $btnPurple;
+          }
+        }
+
+        .newTaskRow {
           display: flex;
           flex-direction: column;
           row-gap: 1rem;
+        }
 
-          .formGroup{
-            display: flex;
-            flex-direction: column;
-            // row-gap: 2rem;
+        .newTaskInputRadio {
+          accent-color: $btnPurple;
+        }
 
-            .formGroup__item{
-              position: relative;
-              display: flex;
-              align-items: center;
-              width: 100%;
-            }
+        .formSelect {
+          margin: 0.5rem 0 1rem 0;
+        }
 
-            // inputs
-            .newTaskInput{
-              padding: .8rem;
-              border-radius: 10px;
-              border: 1px solid $textLightMode;
-              color: $textLightgrey;
-            }
-
-
-            .newTaskInputTime{
-              padding: .7rem .8rem;
-            }
-
-            .icon{
-              position: absolute;
-              right: 1.2rem;
-            }
-
-            .newTaskTextarea{
-              height: 6rem;
-              resize: none;
-              border: 1px solid $textLightMode;
-              border-radius: 10px;
-              padding: .8rem;
-              color: $textLightgrey;
-            }
-        
-            // label
-            .newTaskLabel{
-              font-weight: 600;
-              // margin-bottom: .5rem;
-            }
-          }
-
-          .radio_container{
-            display: flex;
-            row-gap: 1rem;
-
-            .newTaskInputRadio{
-              accent-color: $btnPurple;
-            }
-          }
-
-          .newTaskRow{
-            display: flex;
-            flex-direction: column;
-            row-gap: 1rem;
-          }
-
-          .newTaskInputRadio{
-            accent-color: $btnPurple;
-            }
-
-            .formSelect{
-              margin: .5rem 0 1rem 0;
-            }
-
-          .newTaskButton{
-            padding: .5rem;
-            border-radius: 10px;
-            background-color: $btnPurple;
-            color: $textLightMode;
-            outline: none;
-            border: none;
-
-          }
+        .newTaskButton {
+          padding: 0.5rem;
+          border-radius: 10px;
+          background-color: $btnPurple;
+          color: $textLightMode;
+          outline: none;
+          border: none;
+          cursor: pointer;
         }
       }
     }
+  }
+} // end main body
 
-    } // end main body
+@media screen and (min-width: 769px) {
+  .newTaskForm {
+    padding-top: 2rem !important;
 
-    @media screen and (min-width: 769px){
-
-      .newTaskForm{
-        padding-top: 2rem !important;
-
-        .formSelect{
-          margin: 1rem 0;
-          width: 25vw;
-        }
-        
-      .newTaskRow{
-            flex-direction: row !important;
-            column-gap: 3rem;
-
-            .formGroup{
-                width: 50%;
-           }
-      }
-
-      .newTaskButton{
-        width: 20vw;
-        margin-top: 1rem;
-      }
-    }
+    .formSelect {
+      margin: 1rem 0;
+      width: 25vw;
     }
 
-    @media screen and (min-width: 969px){
-      .newTaskForm{
-        padding-right: 20vw !important;
+    .newTaskRow {
+      flex-direction: row !important;
+      column-gap: 3rem;
+
+      .formGroup {
+        width: 50%;
       }
     }
+
+    .newTaskButton {
+      width: 20vw;
+      margin-top: 1rem;
+    }
+  }
+}
+
+@media screen and (min-width: 969px) {
+  .newTaskForm {
+    padding-right: 20vw !important;
+  }
+}
