--- a/src/components-II/landing-page/section-two/SectionTwo.module.scss
+++ b/src/components-II/landing-page/section-two/SectionTwo.module.scss
@@ -99,4 +99,13 @@
       }
     }
   }
+
+  .howitworksBtn {
+    text-align: left;
+    p {
+      font-weight: bold;
+      margin-bottom: 1rem;
+      color: $black;
+    }
+  }
 }
