--- a/src/components-II/landing-page/text-img-layout-fluid/textImageFluid.module.scss
+++ b/src/components-II/landing-page/text-img-layout-fluid/textImageFluid.module.scss
@@ -1,4 +1,5 @@
 @import "../../../scss/variables";
+@import "../../../scss/mixins";
 
 // ===================
 // MIXINS
@@ -33,21 +34,28 @@
     flex-direction: row-reverse;
   }
   &_header {
-    text-align: center;
-    margin-bottom: 3rem;
-    @media screen and (min-width: 992px) {
-      padding: 0 5rem;
-    }
-    h3 {
-      font-size: 24px;
+    h2 {
+      @include header-font;
       margin: 1rem 0;
-      @media screen and (min-width: 992px) {
-        font-size: 48px;
+    }
+    text-align: center;
+
+    .btnWrapper {
+      display: flex;
+      justify-content: center;
+      @media (min-width: 992px) {
+        justify-content: left;
       }
     }
+
+    @media screen and (min-width: 992px) {
+      text-align: left;
+    }
+
     p {
       font-size: 18px;
       line-height: 180%;
+      margin-bottom: 1rem;
     }
 
     &_buttons {
