--- a/src/core/settings/profile/SettingsProfile.css
+++ b/src/core/settings/profile/SettingsProfile.css
@@ -2,3 +2,8 @@
     display: grid;
     grid-template-columns: 20vw auto;
 }
+@media screen and (max-width: 575px) {
+    .settingsprofile{
+        grid-template-columns: 0px auto;
+    }
+}
