--- a/src/components/TickedMark/tickedheader.module.scss
+++ b/src/components/TickedMark/tickedheader.module.scss
@@ -1,5 +1,5 @@
 .TMheader{
     display: flex;
-    background: linear-gradient(118.87deg, #8344EA 0%, #7038D4 101.04%);
+    background: #7b3fe1;
     justify-content: center;
 }
