--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -17,6 +17,7 @@ body {
   transition: 0.3s ease;
   &:hover {
     box-shadow: 0px 0px 0px 4px #714dd950;
+    color: #fff;
   }
 }
 
@@ -31,4 +32,11 @@ body {
   @media (min-width: 992px) {
     display: none;
   }
+}
+
+.icon {
+  padding: 1rem;
+  border-radius: 100%;
+  background-color: $activeColor;
+  color: $white;
 }
