--- a/src/components/userDasboardComponents/home/TodoCard.module.scss
+++ b/src/components/userDasboardComponents/home/TodoCard.module.scss
@@ -6,6 +6,7 @@
   justify-content: space-between;
   border-top: 1px solid #e9f3f5;
   border-bottom: 1px solid #e9f3f5;
+  position: relative;
 }
 
 .wrapper:hover {
@@ -27,6 +28,14 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: 10px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
 }
 
 .content h4 {
@@ -68,4 +77,10 @@
   font-size: 12px;
   line-height: 100%;
   color: #707070;
+}
+
+.checkboxWrapper {
+  display: flex;
+  position: relative;
+  z-index: 2;
 }
