--- a/src/components-II/contact/contactForm/ContactForm.module.scss
+++ b/src/components-II/contact/contactForm/ContactForm.module.scss
@@ -2,9 +2,10 @@
 @import "../../../scss/variables";
 
 .page {
-  // border: 1px solid red;
-  @include container;
-
+  width: 100%;
+  max-width: 992px;
+  margin: 0 auto;
+  padding: 0 2rem;
   font-size: 0.875rem;
   font-family: "Open Sans", sans-serif;
   cursor: default;
@@ -15,12 +16,12 @@
   font-size: 2.3125rem;
   font-weight: 700;
   margin-bottom: 1rem;
-  color: #000000;
+  color: $black;
 }
 
 .firstPara {
   font-weight: 700;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .emphasis {
@@ -118,13 +119,10 @@ textarea {
 }
 
 button[type="submit"] {
-  padding: 0.875rem;
-  font-family: inherit;
-  color: #fafafa;
-  font-weight: 600;
-  border-radius: 0.5rem;
-  background-color: var(--primary);
-  border: none;
+  @include button;
+  width: 100%;
+  background-color: $activeColor;
+  color: $white;
 }
 
 @media screen and (min-width: 768px) {
@@ -136,7 +134,6 @@ button[type="submit"] {
   }
   .firstPara {
     font-size: 1.5625rem;
-    margin-bottom: 3rem;
   }
   .top {
     font-size: 1rem;
