--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -40,3 +40,7 @@ body {
   background-color: $activeColor;
   color: $white;
 }
+
+.shadow {
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
