chore: external-pages code base clean up

--- a/src/components-II/landing-page/section-two/SectionTwo.module.scss
+++ b/src/components-II/landing-page/section-two/SectionTwo.module.scss
@@ -102,6 +102,9 @@
 
   .howitworksBtn {
     text-align: left;
+    @media (min-width: 992px) {
+      margin-left: 4rem;
+    }
     p {
       font-weight: bold;
       margin-bottom: 1rem;
