--- a/src/components-II/landing-page/todoList/todo.module.scss
+++ b/src/components-II/landing-page/todoList/todo.module.scss
@@ -28,8 +28,9 @@
 .vr {
   display: flex;
   flex-direction: column;
-  margin: 174px 0 5rem;
+
   @media screen and (min-width: 992px) {
+    margin: 0 0 5rem;
     flex-direction: row-reverse;
   }
   &_header {
