--- a/src/layout/header/navbar.module.scss
+++ b/src/layout/header/navbar.module.scss
@@ -50,6 +50,21 @@
   }
 }
 
+.ctaMobile {
+  width: 100%;
+  a {
+    width: 100%;
+    margin: 1rem 0;
+  }
+}
+
+.logoutBtn {
+  @include button;
+  border: 1px solid red;
+  background: transparent;
+  color: red;
+}
+
 .sidebar {
   position: fixed;
   top: 0;
@@ -58,6 +73,7 @@
   height: 100vh;
   z-index: 100;
   border-right: 1px solid lightgray;
+  background-color: $white;
   transition: 1s all ease;
 
   .nav {
