--- a/src/components/Login/style.module.scss
+++ b/src/components/Login/style.module.scss
@@ -1,9 +1,20 @@
 .login__main {
 	min-height: 100vh;
 	width: 100%;
-	display: grid;
+	display: flex;
 	place-items: center;
 	background-color: #E5E5E5;
+
+	.loginImg{
+		margin-left: 7.5rem;
+		margin-top: 9.75rem;
+		margin-right: 7rem;
+		margin-bottom: 1rem;
+
+		@media screen and (max-width: 600px) {
+            display: none;
+        }
+	}
 }
 
 .login__title {
