--- a/src/components/career/CareerRecruitment/CareerRecruitment.module.scss
+++ b/src/components/career/CareerRecruitment/CareerRecruitment.module.scss
@@ -23,11 +23,12 @@ h2 {
   }
 
   &__p {
+    // border: 1px solid red;
     line-height: 160%;
     font-weight: 600;
     font-size: 1.125rem;
     padding: 1.5rem 0;
-    // margin: 0 auto 1.875rem auto;
+    margin: 0 auto 1.875rem auto;
     // width: 65%;
     text-align: center;
     color: #333333;
