--- a/src/components/about/testimonial/Testimonal.module.scss
+++ b/src/components/about/testimonial/Testimonal.module.scss
@@ -2,26 +2,30 @@
 @import "../../../scss/variables";
 
 .section {
-  margin: 5rem 0 10rem;
+  padding: 5rem 0 10rem;
+  background-color: #f9f7ff;
   .valueCard {
     @include container;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
+    gap: 6rem;
     margin-top: 3rem;
     margin-bottom: 3rem;
     @media (min-width: 992px) {
       flex-direction: row;
     }
   }
+
+  /* Testimonials */
   .sayBox {
     @include container;
 
     h2 {
       @include header-font;
       margin-bottom: 3rem;
+      text-align: center;
     }
 
     .gridBox {
@@ -32,7 +36,7 @@
         grid-template-columns: repeat(2, 1fr);
       }
       @media (min-width: 992px) {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(4, 1fr);
       }
     }
   }
