--- a/src/components/landing-page/feature/feature.module.scss
+++ b/src/components/landing-page/feature/feature.module.scss
@@ -5,22 +5,22 @@
   background: rgba(249, 247, 255, 1);
   padding-bottom: 10rem;
 
-  .container {
-    // @include container;
-  }
-
   h2 {
     text-align: center;
     margin-bottom: 3rem;
     @include header-font;
   }
   .featureGrid {
+    padding: 0 1rem;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    row-gap: 2rem;
-    // column-gap: 5rem;
+    row-gap: 1.688rem;
+
     @media (min-width: 992px) {
-        column-gap: 14rem;
+      padding: initial;
+      max-width: 1007px;
+      margin: 0 auto;
+      column-gap: 1.688rem;
       grid-template-columns: repeat(2, 1fr);
     }
   }
