--- a/src/components/landing-page/why-ticked/whytickedbox.module.scss
+++ b/src/components/landing-page/why-ticked/whytickedbox.module.scss
@@ -4,17 +4,13 @@
 .whytickedbox {
   width: 100%;
   height: 295px;
-  // background-color: $white;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   padding: 24px 23px;
   border-radius: 8px;
-
-  // @media (min-width: 1200px) {
-  //   // width: 443px;
-  // }
 
   .whytickedbox__header {
     font-size: 1rem;
@@ -31,5 +27,17 @@
     @media screen and (min-width: 992px) {
       font-size: 1rem;
     }
+  }
+}
+
+.featureBox {
+  @extend .whytickedbox;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 1.5rem 3.6rem;
+
+  img {
+    margin-bottom: 22px;
   }
 }
