--- a/src/layout/header/navbar.module.scss
+++ b/src/layout/header/navbar.module.scss
@@ -10,8 +10,9 @@
 }
 
 .nav {
-  @include container;
   padding: 20px 1rem;
+  max-width: 80vw;
+  margin: 0 auto;
   .links,
   .cta {
     gap: 2rem;
