--- a/src/components/contact/contactForm/ContactForm.module.scss
+++ b/src/components/contact/contactForm/ContactForm.module.scss
@@ -3,9 +3,9 @@
 
 .page {
   width: 100%;
-  max-width: 992px;
+  max-width: 80vw;
   margin: 0 auto;
-  padding: 0 2rem;
+  // padding: 0 2rem;
   font-size: 0.875rem;
   font-family: "Open Sans", sans-serif;
   cursor: default;
