--- a/src/components/landing-page/download/Download.module.scss
+++ b/src/components/landing-page/download/Download.module.scss
@@ -25,6 +25,8 @@
   // min-height: 31.48vh;
   @media (min-width: 900px) {
     display: flex;
+    max-width: 100vw;
+    margin: 0 auto;
   }
 
   &__tick {
