--- a/src/components/landing-page/text-image-layout/textImageLayout.module.scss
+++ b/src/components/landing-page/text-image-layout/textImageLayout.module.scss
@@ -2,13 +2,18 @@
 @import "../../../scss/mixins";
 
 .layout {
-  @include container;
+  // @include container;
+  
+
   display: flex;
   flex-direction: column;
   gap: 3rem;
 
   margin-bottom: 5rem;
   @media (min-width: 992px) {
+    width: 80vw;
+    margin-top: 20px;
+  margin:  0 auto;
     flex-direction: row;
     .imgWrapper,
     .textWrapper {
