--- a/src/components/landing-page/text-img-layout-fluid/textImageFluid.module.scss
+++ b/src/components/landing-page/text-img-layout-fluid/textImageFluid.module.scss
@@ -32,6 +32,8 @@
   margin: 174px 0 5rem;
   @media screen and (min-width: 992px) {
     flex-direction: row-reverse;
+    max-width: 90vw;
+    // margin: 50px auto;
   }
   &_header {
     h2 {
