--- a/src/layout/footer/news-letter-form/newsLetter.module.scss
+++ b/src/layout/footer/news-letter-form/newsLetter.module.scss
@@ -1,5 +1,9 @@
 .news__letter {
   .header {
+   @media screen and (max-width: 486px) {
+     margin-bottom: 2rem;
+   }
+    
     color: #fff;
     font-size: 25px;
     font-weight: 700;
@@ -10,14 +14,24 @@
     display: flex;
     flex-direction: column;
 
+
     .label {
+      @media screen and (max-width: 486px)  {
+       margin-left: -14px;
+      }
       text-align: left !important;
       font-size: 12px;
       color: #fff;
+      font-weight: 700;
+      margin-bottom: 0.4rem;
     }
   }
 
   .input {
+    @media screen and (max-width: 486px) {
+    width: 311.89px;
+    height: 48px
+    }
     width: 100%;
     background-color: #fff;
     height: 48px;
@@ -26,4 +40,46 @@
     padding: 0 2rem;
     margin: 0 0 1rem 0;
   }
+  
+  .input_container{
+    @media screen and (max-width: 486px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px; 
+    }
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+  }
+  
+  .subscribe_btn {
+    @media screen and (max-width: 486px) {
+    font-size: 14px;
+    background: #714DD9;
+    border-radius: 8px;
+    padding: 14px;
+    width: 311.89px;
+    height: 48px;
+    border: none;
+    color: #FAFAFA;
+    }
+    
+    font-weight: 600;
+    font-size: 14px;
+    text-transform: uppercase;
+    background: #714DD9;
+    border-radius: 8px;
+    padding: 14px;
+    width: 103px;
+    height: 48px;
+    border: none;
+    color: #FAFAFA;
+    margin-top: -1px;
+  }
+  
 }
