--- a/src/components/contact/contact-map/Map.module.scss
+++ b/src/components/contact/contact-map/Map.module.scss
@@ -8,7 +8,6 @@
     padding: 5rem 0 254px;
     max-width: 80vw;
     margin: 0 auto;
-
   }
 
   .container {
@@ -98,10 +97,16 @@
             cursor: pointer;
             border-radius: 5px;
             display: flex;
-            justify-content: space-around;
+            padding: 10px;
+            transition: 0.3s ease-in;
+            gap: 1rem;
             margin: auto;
             align-items: center;
             border: 1px solid #714dd9;
+
+            &:hover {
+              gap: 2rem;
+            }
             p {
               font-family: Open Sans;
               font-size: 14px;
