--- a/src/layout/header/navbar.module.scss
+++ b/src/layout/header/navbar.module.scss
@@ -64,6 +64,9 @@
   border: 1px solid red;
   background: transparent;
   color: red;
+  &:hover {
+    box-shadow: 0px 0px 0px 4px #ff000050;
+  }
 }
 
 .sidebar {
