--- a/src/core/auth/signup/Signup.module.scss
+++ b/src/core/auth/signup/Signup.module.scss
@@ -35,6 +35,13 @@
             display: flex;
             flex-direction: column;
             
+            .phone{
+                background-color: #fff;
+                border-radius: 0.5rem;
+                border: 1px solid #E9F3F5;
+                padding: 0 1rem;
+                margin-top: 0;
+            }
 
             .describer{
                 font-weight: 700;
@@ -84,15 +91,21 @@
                     }
 
             }
-
             input{
+                border: none;
+                padding: 0;
+                outline: none;
+                margin-top: 1rem;
+            }
+
+
+            .input{
                 padding: 0.938rem 1rem;
                 height: 3rem;
                 background: #FFFFFF;
                 border: 1px solid #E9F3F5;
                 border-radius: 0.5rem;
                 
-
                 &:focus{
                     outline: none;
                     border: 1px solid #714DD9;
