--- a/src/components/VA-Profile/VaProfile.module.scss
+++ b/src/components/VA-Profile/VaProfile.module.scss
@@ -243,7 +243,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 16px 0px;
+  padding: 1rem;
   background: #FFFFFF;
   border: 1px solid #D3D0D9;
   border-radius: 0.5rem;
