--- a/src/core/auth/signup/Signup.module.scss
+++ b/src/core/auth/signup/Signup.module.scss
@@ -1,6 +1,7 @@
 .signupContainer{
     display: flex;
-    padding-bottom: 13.8rem;
+    justify-content: space-between;
+    padding-bottom: 2rem;
     gap: 7rem;
     background-color: #F6FAFB;
 
@@ -8,17 +9,11 @@
         padding-bottom: 3.625rem;
     }
 
-    .signupImg{
-        margin-top: 8.1rem;
 
-        @media screen and (max-width: 600px) {
-            display: none;
-        }
-    }
-
-    .signupRight{
+    .signupLeft{
         width: 29rem;
         margin-top: 2.5rem;
+        margin-left: 4rem;
 
         @media screen and (max-width: 600px) {
             margin-left: 1.25rem;
@@ -39,7 +34,7 @@
         .eachContainer{
             display: flex;
             flex-direction: column;
-            position: relative;
+            
 
             .describer{
                 font-weight: 700;
@@ -51,12 +46,52 @@
 
             }
 
+            .passwordInputWrapper{
+                position: relative;
+
+                .passwordInput{
+                    padding: 0.938rem 1rem;
+                    height: 3rem;
+                    background: #FFFFFF;
+                    border: 1px solid #E9F3F5;
+                    border-radius: 0.5rem;
+                    
+
+                    &:focus{
+                        outline: none;
+                        border: 1px solid #714DD9;
+                    }
+
+                }
+
+                    .hideEye{
+                        position: absolute;
+                        cursor: pointer;
+                        right: 1rem;
+                        bottom: 1.7rem;
+                        font-size: 1.5rem;
+                        display: none;
+                    }
+                    
+                    .showEye{
+                        position: absolute;
+                        cursor: pointer;
+                        right: 1rem;
+                        bottom: 1.7rem;
+                        font-size: 1.5rem;
+                        display: flex;
+                        
+                    }
+
+            }
+
             input{
                 padding: 0.938rem 1rem;
                 height: 3rem;
                 background: #FFFFFF;
                 border: 1px solid #E9F3F5;
                 border-radius: 0.5rem;
+                
 
                 &:focus{
                     outline: none;
@@ -72,30 +107,20 @@
             }
            
 
-            .hideEye{
-                position: absolute;
-                cursor: pointer;
-                right: 1rem;
-                bottom: 1.7rem;
-                font-size: 1.5rem;
-                display: none;
-            }
-            
-            .showEye{
-                position: absolute;
-                cursor: pointer;
-                right: 1rem;
-                bottom: 1.7rem;
-                font-size: 1.5rem;
-                display: flex;
-                
-            }
-
             .inputFieldErrorText{
                 font-weight: 400;
                 font-size: 0.75rem;
                 line-height: 100%;
                 color: #DB0004;
+            }
+
+            .select{
+                padding: 0.938rem 1rem;
+                height: 3rem;
+                background: #FFFFFF;
+                border: 1px solid #E9F3F5;
+                border-radius: 0.5rem;
+                cursor: pointer;
             }
 
         }
@@ -150,6 +175,19 @@
             margin-top: 1.719rem;
             color: #707070;
             text-align: center;
+        }
+    }
+
+    .signupImg{
+        height: inherit;
+        
+        img{
+            height: 100%;
+            object-fit: cover;
+        }
+
+        @media screen and (max-width: 600px) {
+            display: none;
         }
     }
 }
